--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
+  "devDependencies": {
+    "gh-pages": "^4.0.0",
+    "typescript": "^4.3.5"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
